<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="nav_host_fragment" type="id" />
    <item name="bottom_navigation" type="id" />
</resources>
